--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@iconify/react": "^4.1.1",
+    "@mui/lab": "^5.0.0-alpha.157",
+    "@mui/material": "^5.15.1",
+    "@mui/styled-engine": "^5.15.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "styled-components": "^6.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
