--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.157",
     "@mui/material": "^5.15.1",
     "@mui/styled-engine": "^5.15.1",
+    "embla-carousel-react": "^8.0.0-rc17",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
