--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,14 @@
     "embla-carousel-react": "^8.0.0-rc17",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
