--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.8.0",
-    "react-timeago": "^7.2.0"
+    "react-slick": "^0.30.1",
+    "react-timeago": "^7.2.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
