--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive-carousel": "^3.2.23",
     "react-player": "^2.14.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.1",
