--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,25 +15,7 @@ jobs:
       - name: Install nodeJS
         uses: actions/setup-node@v2
 
-      - name: Install dependencies
-        run: npm i
-
-      - name: Build app
-        run: cd frontend/ && npm run build
-
-      - name: Install ssh key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          known_hosts: 'just a placeholder'
-
-      - name: Add known hosts
-        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-
-      - name: Deploy on VPS
-        run: rsync -avz . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST}}:/var/www/html/origindigital
-
-      - name: Migrate database
+      - name: Deploy app
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -42,6 +24,6 @@ jobs:
           port: 22
           script: |
             cd /var/www/html/origindigital
-            ls
-            npm run db:migrate
-            npm run db:seed
+            git pull origin main
+            npm i
+            npm run build
