--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-alice-carousel": "^2.8.0",
     "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-player": "^2.14.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
